# cinema_booking

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
client/src/api/: auth.js  cinemas.js  movies.js  sсreenings.js
client/src/assets/: Icons.jsx
client/src/components/: AuthContext.jsx  BurgerMenu.jsx  Footer.jsx  Header.jsx  InfoCard.jsx
client/src/features/main/components/: AdminSessionModal.jsx  CinemaCardsSection.jsx  DataFilters.jsx  DeleteMovieDialog.jsx  MovieScheduleSection.jsx  NoLoginModal.jsx  (+1 more)
client/src/pages/: AuthPage.jsx  EventsPage.jsx  MainPage.jsx  PaymentPage.jsx  PlaceholderPage.jsx  PromotionPage.jsx  RentPage.jsx  SportPage.jsx  UserPage.jsx
server/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  seed.py
server/alembic/: env.py
server/alembic/versions/: 247eb2a61eeb_initial_schema.py  a1b2c3d4e5f6_add_poster_url_and_format.py  b2c3d4e5f6a7_add_cinema_extra_fields.py
server/app/: main.py
server/app/api/v1/auth/: deps.py  router.py  utils.py
server/app/api/v1/cinemas/: router.py
server/app/api/v1/halls/: router.py
server/app/api/v1/movies/: router.py
server/app/api/v1/orders/: router.py
server/app/api/v1/screenings/: router.py
server/app/core/: config.py  logging.py
server/app/db/: database.py
server/app/models/: models.py
server/app/schemas/: __init__.py  base.py  cinema.py  hall.py  movie.py  order.py  screening.py  user.py
(+2 files in other folders)
